# wykobi

./: CMakeLists.txt  compile_commands.json  wykobi_build.cpp
doc/: Doxyfile
include/: wykobi.hpp  wykobi.inl
